# wonik_project

./: -home-qubo-wonik_ws-src-wonik_project-wonik_real-launch-.txt  README.md
fastech_ros_sdk/: CMakeLists.txt  package.xml
fastech_ros_sdk/include/fastech_ros_sdk/fastech/: fastech_step.hpp
fastech_ros_sdk/include/fastech_ros_sdk/fastech/util/: Definition.h
fastech_ros_sdk/launch/: fastech_ros_sdk_example.launch  multi-fastech.launch
fastech_ros_sdk/python/: multi-test.py  test.py
fastech_ros_sdk/src/: fastech_ros.cpp
fastech_ros_sdk/src/fastech/: fastech_step.cpp
gazebo_plugins/: CMakeLists.txt
gazebo_plugins/src/: gazebo_ros_planar_move_wonik.cpp
iahrs_driver/src/: iahrs_driver.cpp
laser_line_extraction/: CMakeLists.txt  package.xml
laser_line_extraction/launch/: example.launch
laser_line_extraction/scripts/: test.py
laser_line_extraction/src/: line_extraction_ros.cpp
md_motor_ros_sdk/: CMakeLists.txt  package.xml
md_motor_ros_sdk/src/: com.cpp
pointcloud_to_laserscan/launch/: sample_node.launch
pointcloud_to_laserscan/src/: pointcloud_to_laserscan_nodelet.cpp
rda_imu_driver/: CMakeLists.txt  package.xml
rda_imu_driver/launch/: example.launch
rda_imu_driver/src/: rda_imu_driver_node.cpp
wonik_common/: CMakeLists.txt  package.xml
wonik_common/include/wonik_common/: Matrix.h  MatrixX.h
wonik_docking/: CMakeLists.txt  package.xml
wonik_kinematics_mecanum/: CMakeLists.txt  package.xml
wonik_kinematics_mecanum/include/wonik_kinematics_mecanum/: Kinematics.h  MecanumKinematics.h
wonik_kinematics_mecanum/launch/: test_setup.launch  test_simulation.launch
wonik_kinematics_mecanum/src/: Mecanum4WKinematics.cpp  wonik_kinematics_mecanum_node.cpp  wonik_kinematics_mecanum_sim_node.cpp
wonik_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
wonik_localization/: CMakeLists.txt  package.xml
wonik_localization/include/wonik_localization/: Convert.h  GridMap.h  Solver.h  Util.h
wonik_localization/launch/: test_setup.launch
wonik_localization/src/: wonik_localization_node.cpp
wonik_real/: CMakeLists.txt  package.xml
wonik_real/configs/: twist_mux.yaml
wonik_real/configs/cameras/: d435_1.launch  d435_2.launch  filter_1.launch  filter_2.launch
wonik_real/configs/docking/: auto_docking.launch  line_extractor.launch
wonik_real/configs/docking/config/: auto_docking.yaml
wonik_real/configs/imu/: imu.launch
wonik_real/configs/kinematics/: kinematics.launch  kinematics.yaml
wonik_real/configs/lidar/: lidar.launch
wonik_real/configs/lidar/sick/s561/: sick_s561.launch
wonik_real/configs/mcu/: mcu.launch
wonik_real/configs/motors/: drive.launch  drive.yaml
wonik_real/configs/navigation/amcl/: amcl_basic.launch
wonik_real/configs/navigation/gmapping/: gmapping_basic.launch
wonik_real/configs/navigation/move_base/: move_base.launch
wonik_real/configs/navigation/move_base/costmaps/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml
wonik_real/configs/navigation/move_base/local_planner/wonik_local_planner/: wonik_planner.yaml
wonik_real/configs/navigation/move_base/move_base/: move_base.yaml
wonik_real/configs/navigation/wonik_localization/: wonik_localization.launch
wonik_real/configs/rviz/: basic_config.rviz  navigation.rviz
wonik_real/configs/sensor_fusion/: robot_localization.launch
wonik_real/configs/sensor_fusion/robot_localization/: robot_localization.launch  robot_localization.yaml  robot_localization_ukf.yaml
wonik_real/configs/teleop/: teleop_keyboard.launch
wonik_real/include/wonik_drive/: DriveParam.h  StrUtil.h  drive.hpp
wonik_real/launch/: bringup.launch  display_robot_model.launch  docking.launch  navigation_basic_amcl.launch  navigation_basic_localization.launch  navigation_basic_slam.launch  play_ros_bag.launch  rviz.launch  rviz_navigation.launch
wonik_real/maps/: mymap.pgm  mymap.yaml
wonik_real/python/: docking_script.py  docking_test.py
wonik_real/robot_model/: wonik_robot.urdf.xacro
wonik_real/robot_model/urdf/wonik_robot_xacros/: body.xacro  cabinet.xacro  d435.xacro  imu.xacro  omni_wheel.xacro  sick_S561.xacro  sick_laser.xacro
wonik_real/src/: drive.cpp  drive_node.cpp  drive_node_fastech.cpp
wonik_simulation/: CMakeLists.txt  package.xml
wonik_simulation/config/: twist_mux.yaml
wonik_simulation/config/amcl/: wonik_robot_amcl.launch
wonik_simulation/config/controller/config/: wonik_controller_setup.yaml  wonik_robot_wheel_controller.yaml
wonik_simulation/config/controller/launch/: controller_utils.launch
wonik_simulation/config/gmapping/: wonik_robot_gmapping.launch
wonik_simulation/config/move_base/: wonik_robot_move_base.launch  wonik_robot_move_base2.launch
wonik_simulation/config/move_base/costmaps/: costmap_common2.yaml
wonik_simulation/config/move_base/local_planner/wonik_local_planner/: wonik_planner.yaml  wonik_planner_high_load.yaml
wonik_simulation/config/rviz/: navigation_config.rviz
wonik_simulation/config/sensor_fusion/: robot_localization.launch
wonik_simulation/config/sensor_fusion/robot_localization/: robot_localization.yaml  robot_localization_ukf.yaml
wonik_simulation/config/wonik_localization/: wonik_localization.launch
wonik_simulation/launch/: docking.launch  simulation.launch  wonik_autonomous_navigation.launch  wonik_line_extractor.launch  wonik_localization.launch  wonik_rviz.launch  wonik_simulation_basic.launch
wonik_simulation/maps/: workshop.yaml
wonik_simulation/models/docker/: model.config  model.sdf
wonik_simulation/models/docker/meshes/: untitled.dae  untitled.stl
wonik_simulation/robots/: wonik_robot.urdf.xacro
wonik_simulation/robots/xacros/: imu.xacro  micro_scan.xacro  omni_wheel.xacro  sick_S300.xacro  sick_laser.xacro  ultrasonic.xacro  wonik_robot_body.xacro  wonik_robot_gazebo.xacro
wonik_simulation/scripts/: docking_test.py
wonik_simulation/worlds/: workshop.world
wonik_teleop/: CMakeLists.txt  package.xml
wonik_teleop/launch/: teleop.launch  teleop_keyboard.launch
wonik_teleop/src/: wonik_teleop.cpp  wonik_teleop_keyboard.cpp
(+21 files in other folders)
