<?xml version="1.0"?>
<package format="2">
  <name>fastech_ros_sdk</name>
  <version>0.0.1</version>
  <description>The fastech_ros_sdk package</description>

  <maintainer email="kim87@khu.ac.kr">Sanghyun Kim</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>