<package>
  <name>wonik_kinematics_mecanum</name>
  <version>0.1.1</version>
  <description>transformation Node for neobotix robots with mecanum drive</description>

  <maintainer email="kim87@khu.ac.kr">Sanghyun Kim</maintainer>
  <license>BSD</license>
  <author>Sanghyun Kim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
