<package>
    <name>wonik_localization</name>
    <version>1.0.0</version>
    <description>
		Platform localization node based on laser sensors and a grid map.
    </description>
    <maintainer email="kim87@khu.ac.kr">Sanghyun Kim</maintainer>
    <license>BSD</license>
    <author>Sanghyun Kim</author>

    <buildtool_depend>catkin</buildtool_depend>

    
    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>wonik_common</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>wonik_common</run_depend>

</package>


