<?xml version="1.0"?>
<package>
  <name>wonik_teleop</name>
  <version>0.0.0</version>
  <description>wonik_teleop</description>

  <maintainer email="kim87@khu.ac.kr">Sanghyun Kim</maintainer>
  <license>BSD</license>
  <author>Sanghyun Kim</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>



  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
